# ocp-midstreamer

./: Cargo.toml  Dockerfile.cli  README.md  index.html
.github/workflows/: midstreamer-run.yml  release-image.yml  streamstress-run.yml
config/: components.toml
dashboard/: index.html
dashboard/css/: dashboard.css
dashboard/js/: app.js  compare.js  filters.js  timeline.js
dashboard/sample-data/: manifest.json  run-sample-1.json
docs/: design.docx  design.md
docs/img/: diagram1.mmd  diagram2.mmd  diagram3.mmd  diagram4.mmd
js/: charts.js  table.js  utils.js
runs/: 1770158476.json  index.html  manifest.json
scripts/: entrypoint.sh  publish-to-gh-pages.sh
src/: batch.rs  build.rs  bundle.rs  callback.rs  check.rs  cli.rs  component.rs  config.rs  dryrun.rs  exec.rs  github.rs  incluster.rs  k8s.rs  konflux.rs  main.rs  perf.rs  profile.rs  progress.rs  publish.rs  registry.rs  results.rs  setup.rs  snapshot.rs  test.rs  types.rs
src/deploy/: mapping.rs  mod.rs  operator.rs  wait.rs
