[package]
name = "streamstress"
version = "0.1.6"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "8.0"
tempfile = "3.14"
indicatif = "0.18"
console = "0.16"
kube = { version = "3.0.0", features = ["client", "derive"] }
k8s-openapi = { version = "0.27.0", features = ["latest"] }
tokio = { version = "1.49.0", features = ["rt", "macros", "rt-multi-thread", "io-util", "time"] }
futures = "0.3"
toml = "0.9.11"
quick-xml = { version = "0.37", features = ["serde", "serialize"] }
regex = "1.11"
serde_yaml = "0.9"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
